<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        android:background="@drawable/divider"/>

    <ImageView
        android:id="@+id/ivLocationHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_signature_address" />

    <ImageView
        android:id="@+id/ivEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvRecipientDetails"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/ivLocationHint"
        android:paddingRight="16dp"
        android:paddingLeft="8dp"
        android:src="@drawable/btn_editinfo" />

    <TextView
        android:id="@+id/tvRecipientAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivLocationHint"
        android:layout_toLeftOf="@+id/ivEdit"
        android:layout_toRightOf="@+id/ivLocationHint"
        android:text="@string/recipient_address"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/tvRecipientDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvRecipientAddress"
        android:layout_alignRight="@+id/tvRecipientAddress"
        android:layout_below="@id/tvRecipientAddress"
        android:paddingBottom="8dp"
        android:textColor="@color/text"
        tools:text="Additonal recipient info" />

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvRecipientDetails"
        android:background="@null"
        android:drawableLeft="@drawable/btn_clearsignature"
        android:onClick="onClear"
        android:text="@string/btnClear"
        android:textColor="@color/lalamove_orange"
        android:layout_marginTop="1dp"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tvRecipientDetails"
        android:background="@color/divider" />

    <com.example.podlibrary.DrawingView
        android:id="@+id/drawingView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/divider"
        android:layout_above="@+id/confirmation"/>

    <RelativeLayout
        android:id="@+id/confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:layout_alignParentBottom="true"
        android:background="@color/button_underlay">

        <TextView
            android:id="@+id/tvAgreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/agreement"
            android:layout_alignParentTop="true"
            android:textColor="@color/grey_text"
            android:textAlignment="center"
            android:drawableLeft="@drawable/ic_tnc_checkbox"
            android:drawablePadding="8dp"/>

        <Button
            android:layout_below="@+id/tvAgreement"
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/lala_button"
            android:layout_margin="8dp"
            android:onClick="onSave"
            android:text="@string/btnConfirm"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="false" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ivEmptySignature"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_emptysignature" />

        <TextView
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/verification"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/ivEmptySig"/>
    </LinearLayout>

</RelativeLayout>
